-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.4, 4.8.4, 5.0.0, 5.0.1
-
None
-
44ea4280b20179eea5520fd1ef5ac814c528c45e (Qt 5); 763f8e4861108a55fafe267f3e36c2ed222b3271 (Qt 4)
QTiffHandler::read ignores the tags ImageLength and ImageWidth if there is no tag ResolutionUnit. This is wrong because the default value of ResolutionUnit is 2 (inch).
For Gerrit Dashboard: QTBUG-22322 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
46674,2 | Fix TIFFTAG_RESOLUTIONUNIT handling. | stable | qt/qtimageformats | Status: MERGED | +2 | 0 |
46955,2 | Fix TIFFTAG_RESOLUTIONUNIT handling. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |